# micro3d

./: CMakeLists.txt  benchmark.cpp  benchmark.h  cube.ply  demo.cpp  demo.h  demo_ship.ply  lighttest.cpp  lighttest.h  main.cpp  menu.cpp  menu.h  micro3D.pro  micro3D.pro.user.bffcc01  milkyway.ply  moon_green.ply  moon_red.ply  mttest.cpp  mttest.h  planet.ply  ship.ply  sun.ply  terrain.cpp  terrain.h  terrain.ply
IOStuff/: console.cpp  console.h  line.cpp  line.h  program.cpp  program.h  programstage.cpp  programstage.h  renderer.cpp  renderer.h  resource_getter.h  resource_manager.h  singleton.hpp  touchable.cpp  touchable.h  touchbuffer.cpp  touchbuffer.h  ui.cpp  ui.h  vect.h
micro3D/: color.cpp  color.h  lightpoint.h  mesh.cpp  mesh.h  micro3d.cpp  micro3d.h  model.cpp  model.h  point3f.cpp  point3f.h  rasterization.cpp  rasterization.h  rendercontext.cpp  rendercontext.h  rendercontextmt.cpp  rendercontextmt.h  renderstate.cpp  renderstate.h  shaders.cpp  shaders.h  transformation.cpp  transformation.h
micro3D/multiThread/: fragmentjob.cpp  fragmentjob.h  fragmentworker.cpp  fragmentworker.h  jobqueue.h  vertexjob.cpp  vertexjob.h  vertexthread.h.autosave  vertexworker.cpp  vertexworker.h
